--- a/src/app/screens/posts/components/equipa-form/equipa-form.component.scss
+++ b/src/app/screens/posts/components/equipa-form/equipa-form.component.scss
@@ -30,6 +30,7 @@
 
     @include tablet {
         flex: 1;
+        min-width: 0;
         padding: 30px 55px;
     }
 }
